manifest/objects/ALTF__Account_Question__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Plan_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Type (Deprecated)</label>
        <referenceTo>ALTF__Account_Plan_Type__c</referenceTo>
        <relationshipName>AM_Plan_Unit_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Displayed_Account_Fields__c</fullName>
        <description>Select the names and order of the Account fields that appear for this Account question. The value of this field should be a comma separated list (with no gaps) of the API Account field names.</description>
        <inlineHelpText>Select the names and order of the Account fields that appear for this Account question. The value of this field should be a comma separated list (with no gaps) of the API Account field names.</inlineHelpText>
        <label>Displayed Account Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Help__c</fullName>
        <label>Help</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ALTF__Order_Number__c</fullName>
        <label>Order Number (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Section_Heading__c</fullName>
        <label>Section Heading (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Section 1</fullName>
                </value>
                <value>
                    <fullName>Section 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Altify AM Account Question</label>
    <nameField>
        <label>AM Plan Row Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify AM Account Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>